# pilegit

./: .pilegit.toml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: demo.tape
src/: lib.rs  main.rs
src/core/: config.rs  history.rs  mod.rs  stack.rs
src/forge/: custom.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  phabricator.rs  pr_description.rs  stack_base_hint.rs
src/git/: mod.rs  ops.rs  repo_loader.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
tests/: test_git_ops.rs
