[package]
name = "pilegit"
version = "0.1.11"
edition = "2021"
description = "Git stacking with style — interactive TUI for stacked PRs"
license = "MIT"
repository = "https://github.com/hokwangchoi/pilegit"
homepage = "https://github.com/hokwangchoi/pilegit"
readme = "README.md"
keywords = ["git", "stacked-diffs", "rebase", "pull-request", "code-review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pgit"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
ratatui = { version = "=0.26.3", features = ["crossterm"] }
crossterm = "=0.27.0"
color-eyre = "=0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "1"
toml = "0.7.8"
